整理文档结构

--- a/src/项目代码说明/日常记录.md
+++ b/src/项目代码说明/日常记录.md
@@ -34,19 +34,13 @@ RN主工程：https://gitlab.viomi.com.cn/app/shop/viomi_vmall_react.git
 RN组件库：https://gitlab.viomi.com.cn/app/UI/Viomi-Rn-UI.git
 
 
-### 需求开发要点：
 
-（1）产品需求评审    
-（2）测试用例评审  
-（3）冒烟测试  
-（4）前端方案设计 在这里记录：http://120.92.35.209:8888/pages/viewpage.action?pageId=20944006  
-（5）前端开发实现步骤分解 http://120.92.208.154:8880/projects/QDKFRW/issues/QDKFRW-5172?filter=allopenissues  
-（6）接口文档 http://120.92.35.209:8888/pages/viewpage.action?pageId=12585082  
-（7）代码管理：   
- -  新feature进入开发前，开发者基于develop开出该feature的feature分支
- -  开发完毕合并代码到develop，锁定该feature，后期在release分支进行bugfix和验收
- - 
+### [需求开发要点](./需求开发要点.md)
+### [代码调试](./调试要点.md)
+### [项目代码阅读理解](./项目代码阅读理解.md)
+### [APP优化](./APP优化.md)
+### [需要了解的框架](./需要了解的框架.md)
+### [rn-语法](./rn-语法.md)
 
-（8）开发和验收完毕后在这里记录一波 http://120.92.35.209:8888/pages/viewpage.action?pageId=148013077
 
 
