--- a/src/项目代码说明/调试要点.md
+++ b/src/项目代码说明/调试要点.md
@@ -29,5 +29,7 @@ start-sub  node node_modules/react-native/local-cli/cli.js start --port 8082
 
 6.安卓机开发模式debugger 不同rn实例只能存活一个，后初始化的会干掉前初始化的，然后就点不动了
 
+7.小细节：页面跳转或者打开容器的回调方法，放在监听回调中，等待登录状态更新后再触发；
+
 
 
