--- a/src/项目代码说明/项目代码阅读理解.md
+++ b/src/项目代码说明/项目代码阅读理解.md
@@ -63,3 +63,10 @@ APPJS
 
 ***
 
+### 原生与RN的交互SDK  
+-  通过NativeModule的YMShopSDK引入
+-  主路由及其跳转管理RouterMapper(有原生，有自定义，有rn的，打开纯RN页面，使用native或者flux的Actions跳转；)
+-  页面跳转或者打开容器的回调方法，放在监听回调中，等待登录状态更新后再触发；
+-  项目基础base包（native_modules文件夹，ym-base，ym-http和ym-native-base）
+
+
