资料整理完毕

--- a/src/项目代码说明/调试要点.md
+++ b/src/项目代码说明/调试要点.md
@@ -18,6 +18,9 @@ import MyTestPageWrapper from './pageWrapper/myTestPageWrapper';
 ```
 
 3.在`app\modules\myTestPage` 写测试代码
+```js
+    新增路由跳转页面需要继承BasePage，并且需要调用getRealComponent方法来保存target（ref），以便继承的各种路由回调能找到相应的ref；
+```
 
 4.杀后台重新打开就会加载最新的rn代码
 
