--- a/src/项目代码说明/需要了解的框架.md
+++ b/src/项目代码说明/需要了解的框架.md
@@ -5,6 +5,8 @@
 知道一下看文档会用就行
 #### react-native-storage
 #### react-native-device-info
+#### husky  -git的工具，检查代码的
+#### patch-package  修改依赖包内容，为依赖包创建补丁
 
 开发重点
 
