--- a/src/项目代码说明/项目代码阅读理解.md
+++ b/src/项目代码说明/项目代码阅读理解.md
@@ -18,6 +18,11 @@
 
        1.一种是rn的路由跳转模式 Actions.xxx()
        2.app的跳转 通过 NativeInterface `app\lib\nativeInterface\NativeInterface.js`定制抛出了API 是在nativeModules.YMShopSDK的基础上进行定制的
+       3.WidgetActionMapper： 
+        (1)在RouterMapper基础上封装的类，通过调用RouterMapper的jump方法来实现页面跳转； 
+        (2)并非两个独立的路由控制器；
+
+
 
 请求通信封装：
        1.native_modules\react-native-ym-http\src\RequestUtils.js
@@ -68,5 +73,12 @@ APPJS
 -  主路由及其跳转管理RouterMapper(有原生，有自定义，有rn的，打开纯RN页面，使用native或者flux的Actions跳转；)
 -  页面跳转或者打开容器的回调方法，放在监听回调中，等待登录状态更新后再触发；
 -  项目基础base包（native_modules文件夹，ym-base，ym-http和ym-native-base）
+
+### 写代码关键内容
+1.WidgetContainer使用了wrapWidget方法创建了高阶组件，通过inject（XXX）（observer（class XXX extends XXX））方法全局注入公共store；
+2.wrapWidget方法内部统一为组件item处理了外容器的背景色等，根据是否需要渲染组件来控制调用super.render（）或者return 空View；
+3.WidgetContainer是最为核心的组件之一，具备功用性；内部通过外部props渲染各种配置的item组件（通过wrapWidget包裹），包含刷新头header；
+4.思想是由外部数据控制渲染；
+5.核心组件大多导出同时都有使用es6和commonJS导出，保证兼容性；
 
 
