--- a/src/项目代码说明/需要了解的框架.md
+++ b/src/项目代码说明/需要了解的框架.md
@@ -1,7 +1,7 @@
 重点了解的
 #### mobx
-#### react-native-router-flux
-
+#### react-native-router-flux  https://www.jianshu.com/p/37428d579cf6
+ 
 知道一下看文档会用就行
 #### react-native-storage
 #### react-native-device-info
