增加了react路由，antd，增加了异步加载组件

--- a/src/项目代码说明/调试要点.md
+++ b/src/项目代码说明/调试要点.md
@@ -35,4 +35,18 @@ start-sub  node node_modules/react-native/local-cli/cli.js start --port 8082
 7.小细节：页面跳转或者打开容器的回调方法，放在监听回调中，等待登录状态更新后再触发；
 
 
+8.用require TypeError: Cannot assign to read only property 'exports' of object '#<Object>'.. 
+解决：https://www.jianshu.com/p/2cf827195066
 
+```js
+./src/index.js
+Error: Multiple configuration files found. Please remove one:
+ - package.json
+ - D:\project\private\react_project\studyreact-demo\.babelrc
+from D:\project\private\react_project\studyreact-demo
+    at Array.reduce (<anonymous>)
+    at loadOneConfig.next (<anonymous>)
+    at findRelativeConfig.next (<anonymous>)
+    at buildRootChain.next (<anonymous>)
+    at loadPrivatePartialConfig.next (<anonymous>)
+```
