--- a/src/项目代码说明/需要了解的框架.md
+++ b/src/项目代码说明/需要了解的框架.md
@@ -1,6 +1,10 @@
 重点了解的
 #### mobx
 #### react-native-router-flux  https://www.jianshu.com/p/37428d579cf6
+
+方便开发测试的工具
+#### fiddler 抓包工具
+#### cocos-creator 游戏 H5
  
 知道一下看文档会用就行
 #### react-native-storage
@@ -8,6 +12,7 @@
 #### husky  -git的工具，检查代码的
 #### patch-package  修改依赖包内容，为依赖包创建补丁
 
-开发重点
+项目架构导致的一些七七叭叭
 
-1.RN和原生是混合的，所以会多次实例化RN所以会导致多次注册，要增加判断在当激活页面的时候才执行
+1.RN和原生是混合的，用原生方法打开新的WEBVIEW，会重新初始化一个RN实例
+2.商城和服务是同一个RN实例，商城和服务进入二级界面是另外一个RN示例
