学习笔记和规划

--- a/src/项目代码说明/调试要点.md
+++ b/src/项目代码说明/调试要点.md
@@ -35,8 +35,21 @@ start-sub  node node_modules/react-native/local-cli/cli.js start --port 8082
 7.小细节：页面跳转或者打开容器的回调方法，放在监听回调中，等待登录状态更新后再触发；
 
 
-8.用require TypeError: Cannot assign to read only property 'exports' of object '#<Object>'.. 
-解决：https://www.jianshu.com/p/2cf827195066
+8.动态加载组件的实现
+（1）用require引入组件： 项目通过`app\router\pageWrapper`这个文件夹对具体页面组件做了管理，用require引入实际的组件
+（2）require和es6的import混合使用会报错` TypeError: Cannot assign to read only property 'exports' of object '#<Object>'.. `因此需要使用插件`babel/plugin-transform-modules-commonjs`解决问题   
+```js
+        npm install --save-dev @babel/plugin-transform-modules-commonjs
+```
+
+（3）添加插件后有两种处理方式
+- 在项目根目录新增.babelrc文件，并在文件中加入
+```js
+      {
+            "plugins": ["@babel/plugin-transform-modules-commonjs"]
+      } 
+```
+ 第一种如果以下错误，就需要使用第二种加入方式，因为package里面已集成Babel的配置
 
 ```js
 ./src/index.js
@@ -50,3 +63,24 @@ from D:\project\private\react_project\studyreact-demo
     at buildRootChain.next (<anonymous>)
     at loadPrivatePartialConfig.next (<anonymous>)
 ```
+
+ - 在文件的package.json里面添加  
+```json 
+      "babel": {
+        "plugins": [
+        [
+            "@babel/plugin-proposal-decorators",
+            {
+            "legacy": true
+            }
+        ],
+        "@babel/plugin-transform-modules-commonjs"
+        ],
+        "presets": [
+        "react-app"
+        ]
+  },
+ ```
+
+
+
