--- a/src/项目代码说明/需要了解的框架.md
+++ b/src/项目代码说明/需要了解的框架.md
@@ -1,10 +1,13 @@
-重点了解的
+个人规划
+重点了解的框架（先用后看源码）
 #### mobx
 #### react-native-router-flux  https://www.jianshu.com/p/37428d579cf6
+#### cocos-creator 游戏 H5
+#### Android/iOS 原生开发
 
 方便开发测试的工具
 #### fiddler 抓包工具
-#### cocos-creator 游戏 H5
+
  
 知道一下看文档会用就行
 #### react-native-storage
